# spaprotfm

./: .gitignore  README.md  pyproject.toml
data/manifests/: hubmap_codex.csv  marker_aliases.yaml
docs/manuscript/: UPLOAD_RECIPE.md  draft_v1.md  references.bib
docs/superpowers/notes/: baselines_summary.md  spaprotfm_v0_vs_baseline.md  spaprotfm_v1_panel_sweep.md  spaprotfm_v1_vs_baseline.md  spaprotfm_v2_vs_v1.md  xds_transfer_final.md
docs/superpowers/plans/: 2026-04-17-month1-env-data-baseline.md  2026-04-18-plan3-he-condition.md
docs/superpowers/specs/: 2026-04-17-spaprotfm-design.md  2026-04-21-cross-dataset-transfer.md
scripts/: download_hubmap.py  plot_architecture.py  plot_panel_flex.py  plot_panel_sweep.py  plot_paper_figures.py  plot_qualitative_predictions.py  plot_transfer_heatmap.py  plot_v1_vs_v2.py  plot_v2_headline.py  plot_xds_final.py  plot_xds_preview.py  run_baseline.py  train_spaprotfm_v0.py  train_spaprotfm_v1.py  train_spaprotfm_v2.py  train_spaprotfm_v2_xds.py
src/spaprotfm/: __init__.py
src/spaprotfm/baselines/: __init__.py  _vanilla_unet.py  murphy_unet.py
src/spaprotfm/condition/: __init__.py  phikon.py  pseudo_he.py
src/spaprotfm/data/: bodenmiller.py  hubmap.py  markers.py  normalization.py  tiling.py
src/spaprotfm/eval/: metrics.py
src/spaprotfm/models/: __init__.py  (+3 more)
tests/: conftest.py  test_bodenmiller_smoke.py  test_markers.py  test_metrics.py  test_normalization.py  test_phikon.py  test_pseudo_he.py  test_spaprotfm_v0.py  test_spaprotfm_v1.py  test_spaprotfm_v2.py  test_tiling.py  test_vanilla_unet.py
