[project]
name = "spaprotfm"
version = "0.1.0"
description = "Multimodal generative panel extension for spatial proteomics"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "lightning>=2.4",
    "diffusers>=0.30",
    "transformers>=4.44",
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-image>=0.24",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "tifffile>=2024.7",
    "zarr>=2.18",
    "anndata>=0.10",
    "scanpy>=1.10",
    "requests>=2.32",
    "tqdm>=4.66",
    "matplotlib>=3.9",
    "pyyaml>=6.0",
    "imagecodecs>=2026.3.6",
    "pyreadr>=0.5.6",
    "rpy2>=3.6.7",
    "torchvision>=0.26.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "hypothesis>=6.108", "pytest-cov>=5.0", "ruff>=0.6"]
# seg = ["deepcell>=0.12"]  # heavy, optional — add manually when needed: uv pip install deepcell

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spaprotfm"]

